# internship

./: README.md
docs/images/: README.md
src/bno_test_pkg/: package.xml  setup.cfg  setup.py
src/bno_test_pkg/bno_test_pkg/: as5966.py  bno05.py  imu_node.py  inference.py
src/bno_test_pkg/bno_test_pkg/result/: best.json  best.xml
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: HybridAStar.srv
src/global_planer/: package.xml  setup.cfg  setup.py
src/global_planer/global_planer/: data_recorder.py  hyprid_A_star.py  map_pre_prcoessor.py  real_robot_command_and_odom_relay.py  sim_vehicle_tf_generator.py
src/local_planner_mpc/: package.xml  setup.cfg  setup.py
src/local_planner_mpc/local_planner_mpc/: mpc_node.py
src/local_planner_stanley/: CMakeLists.txt  package.xml
src/local_planner_stanley/src/: stanley_for_real_bot.cpp  stanley_for_sim.cpp
src/program_bringup/: package.xml
src/program_bringup/config/: efk_iitb.yaml  iitb_view.rviz  slam_toolbox.yaml
src/program_bringup/launch/: iitb_bot.xml  slam.launch.xml
src/robot_maps/maps/iitb_maps/: map.pgm  map.yaml  occupancy_grid.npy  occupancy_grid_mpc.npy
src/vesc/vesc_driver/: CMakeLists.txt
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
src/ydlidar_ros2_driver/params/: ydlidar.yaml
